<?xml version="1.0"?>
<package format="2">
  <name>grid_path_searcher</name>
  <version>0.0.0</version>
  <description>The grid_path_searcher package</description>

  <maintainer email="skywoodsz@gmail.com">skywoodsz</maintainer>


  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>

  <export>

  </export>
</package>
